# RusTunes

./: .gitignore  Cargo.toml  README.md  def_conf.json
src/: lib.rs  main.rs  music_player.rs  music_player_core.rs  utils.rs
src/action_to_type_macro/: Cargo.toml
src/action_to_type_macro/src/: lib.rs
src/music_player/: error.rs  libmpv_handlers.rs  logger.rs  music_player_config.rs  music_player_core.rs  music_player_os_interface.rs  music_player_os_interface_android.rs  music_player_tui.rs  tui.rs
src/music_player/music_player_config/: options_registry.rs
src/music_player/music_player_core/: music_source.rs
src/music_player/tui/: commands.rs  user_input_handler.rs
src/music_player/tui/commands/: commands_registry.rs
src/music_player_core/: music_source.rs
