[package]
name = "rustunes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.2"
libmpv-sirno = "2.0.2-fork.1"
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
serde_json = "1.0.105"
