[package]
name = "rustunes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
action_to_type_macro = { path = "src/action_to_type_macro" }
chrono = "0.4.31"
crossbeam = "0.8.2"
crossterm = "0.27.0"
libmpv-sirno = "2.0.2-fork.1"
log = { version = "0.4.20", features = ["std"] }
rand = "0.8.5"
ratatui = { version = "0.23.0", features = ["all-widgets"] }
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
urlencoding = "2.1.3"

[target.'cfg(not(target_os="android"))'.dependencies]
souvlaki = "0.6.1"

[target.'cfg(windows)'.dependencies]
windows-async = "0.2.1"
